--- a/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake.in
+++ b/cmake/AddBoost.cmake/AddBoost.cmakeConfig.cmake.in
@@ -99,6 +99,8 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
     endif()
   endif()
 
+  message(DEBUG "patches_for_boost: ${patches_for_boost}")
+
   string(REPLACE ";" "\;" ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
                  "${${BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}}"
   )
@@ -127,7 +129,7 @@ macro(add_boost TRY_BOOST_VERSION BOOST_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED
     CPMAddPackage(
       NAME Boost
       VERSION "${boost_find_package_version}"
-      URL ${BOOST_URL}
+      URL ${BOOST_URL} PATCHES ${patches_for_boost}
       FIND_PACKAGE_ARGUMENTS "COMPONENTS ${ESCAPED_BOOST_NOT_HEADER_ONLY_COMPONENTS_THAT_YOU_NEED}"
       OPTIONS "BOOST_ENABLE_CMAKE ON;BOOST_SKIP_INSTALL_RULES OFF;${BOOST_MY_OPTIONS}"
     )
